# openCONFIGURATOR_library

./: .gitreview  CMakeLists.txt  README.md
demo/csharp/: .gitignore  Program.cs  openconfigurator_core_net_app.csproj
demo/csharp/Properties/: AssemblyInfo.cs
demo/java/: build.xml
demo/java/src/org/epsg/openconfigurator/core/java/app/: WrapperTestMainLinux.java  WrapperTestMainMSVC.java  WrapperTestMainMinGW.java
resources/: boost_log_settings.ini
resources/doc/: openconfigurator.core.layout.xml  openconfigurator.core.mainpage.txt  openconfigurator_core.doxyfile
test/: CMakeLists.txt  FindCppUnit.cmake
test/Include/: AccessTypeTest.h  ApplicationProcessTest.h  ArrayDataTypeTest.h  BaseNodeTest.h  BaseObjectTest.h  ComplexDataTypeTest.h  ControlledNodeTest.h  DynamicChannelTest.h  EnumDataTypeTest.h  ErrorCodeTest.h  IEC_DatatypeTest.h  LibraryConfigurationTest.h  LoggingConfigurationTest.h  ManagingNodeTest.h  ModularControlledNodeTest.h  ModuleTest.h  NetworkManagementTest.h  NetworkTest.h  ObjectTest.h  ObjectTypeTest.h  PDOMappingTest.h  ParameterAccessTest.h  ParameterTest.h  PlkConfigurationTest.h  PlkDataTypeTest.h  PlkFeatureTest.h  PlkOperationModeTest.h  ProjectManagerTest.h  RangeTest.h  ResultTest.h  StructDataTypeTest.h  SubObjectTest.h  TestTemplate.h  VarDeclarationTest.h
test/src/: AccessTypeTest.cpp  ApplicationProcessTest.cpp  ArrayDataTypeTest.cpp  BaseNodeTest.cpp  BaseObjectTest.cpp  ComplexDataTypeTest.cpp  ControlledNodeTest.cpp  CoreTestSuite.cpp  DynamicChannelTest.cpp  EnumDataTypeTest.cpp  ErrorCodeTest.cpp  IEC_DatatypeTest.cpp  LibraryConfigurationTest.cpp  LoggingConfigurationTest.cpp  ManagingNodeTest.cpp  ModularControlledNodeTest.cpp  ModuleTest.cpp  NetworkManagementTest.cpp  NetworkTest.cpp  ObjectTest.cpp  ObjectTypeTest.cpp  PDOMappingTest.cpp  ParameterAccessTest.cpp  ParameterTest.cpp  PlkConfigurationTest.cpp  PlkDataTypeTest.cpp  PlkFeatureTest.cpp  PlkOperationModeTest.cpp  ProjectManagerTest.cpp  RangeTest.cpp  ResultTest.cpp  StructDataTypeTest.cpp  SubObjectTest.cpp  TestTemplate.cpp  VarDeclarationTest.cpp
wrapper/csharp/: CMakeLists.txt  openconfigurator_core_wrapper_net.i  std_string_ref.i
wrapper/java/: CMakeLists.txt  openconfigurator_core_wrapper_java.i  std_string_ref.i
